--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="v2ray_vpn"
-        android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+    android:label="v2ray_vpn"
+    android:name="${applicationName}"
+    android:icon="@mipmap/ic_launcher"
+    android:extractNativeLibs="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
