--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,15 +35,20 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_vless: ^1.0.4
-  flutter_riverpod: ^3.1.0
+  flutter_riverpod: ^3.0.3
+  riverpod_annotation: ^3.0.3
   flutter_localizations:
     sdk: flutter
   intl: any
+  go_router: ^17.0.1
+  flutter_secure_storage: ^10.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.10.4
+  flutter_gen_runner:
+  riverpod_generator: ^3.0.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
