--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   intl: any
   go_router: ^17.0.1
   flutter_secure_storage: ^10.0.0
+  sqflite: ^2.4.2
+  path: ^1.9.1
+  equatable: ^2.0.7
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +53,7 @@ dev_dependencies:
   build_runner: ^2.10.4
   flutter_gen_runner:
   riverpod_generator: ^3.0.2
+  json_serializable: ^6.11.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -90,17 +95,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: IranSans
+      fonts:
+        - asset: assets/fonts/IranSans.ttf
+          style: normal
+    - family: Yekan
+      fonts:
+        - asset: assets/fonts/IRANYekanRegularFaNum.ttf
+          style: normal
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+          style: normal
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
